Strcture definition of repo

--- a/Exploratory/COVID-19 NYTimes - Exploratory.ipynb
+++ b/Exploratory/COVID-19 NYTimes - Exploratory.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -186,14 +186,14 @@
        "9  2020-01-26  Los Angeles  California  06037      1      0"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Few data\n",
-    "covidCounties[0:10:]"
+    "covidCounties.head(10)"
    ]
   },
   {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -235,60 +235,60 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>1495060.00000</td>\n",
+       "      <td>1495060.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>4918.17660</td>\n",
+       "      <td>4918.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>24578.26143</td>\n",
+       "      <td>24578.26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.00000</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>121.00000</td>\n",
+       "      <td>121.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>762.00000</td>\n",
+       "      <td>762.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>2772.00000</td>\n",
+       "      <td>2772.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>1254202.00000</td>\n",
+       "      <td>1254202.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               cases\n",
-       "count  1495060.00000\n",
-       "mean      4918.17660\n",
-       "std      24578.26143\n",
-       "min          0.00000\n",
-       "25%        121.00000\n",
-       "50%        762.00000\n",
-       "75%       2772.00000\n",
-       "max    1254202.00000"
+       "            cases\n",
+       "count  1495060.00\n",
+       "mean      4918.18\n",
+       "std      24578.26\n",
+       "min          0.00\n",
+       "25%        121.00\n",
+       "50%        762.00\n",
+       "75%       2772.00\n",
+       "max    1254202.00"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Describe cases\n",
-    "covidCounties.describe().apply(lambda s: s.apply('{0:.5f}'.format))"
+    "covidCounties.describe().apply(lambda s: s.apply('{0:.2f}'.format))"
    ]
   },
   {
@@ -927,6 +927,312 @@
    "source": [
     "# Distrubution of Empty FIPS by State-County\n",
     "covidCounties[['state', 'county','fips']][covidCounties['fips']!=''].groupby(['state', 'county']).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>county</th>\n",
+       "      <th>state</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>cases</th>\n",
+       "      <th>deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>544132</th>\n",
+       "      <td>2020-09-18</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>1664</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1228836</th>\n",
+       "      <td>2021-04-17</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>6760</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243246</th>\n",
+       "      <td>2020-06-16</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>373</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>959382</th>\n",
+       "      <td>2021-01-24</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>5376</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1368449</th>\n",
+       "      <td>2021-05-30</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>7142</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1478829</th>\n",
+       "      <td>2021-07-03</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>7262</td>\n",
+       "      <td>113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35596</th>\n",
+       "      <td>2020-04-06</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>774398</th>\n",
+       "      <td>2020-11-28</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>2735</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1167128</th>\n",
+       "      <td>2021-03-29</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>6577</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>460054</th>\n",
+       "      <td>2020-08-23</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>1324</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59165</th>\n",
+       "      <td>2020-04-15</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363445</th>\n",
+       "      <td>2020-07-24</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>921</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389222</th>\n",
+       "      <td>2020-08-01</td>\n",
+       "      <td>Winston</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01133</td>\n",
+       "      <td>438</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>376354</th>\n",
+       "      <td>2020-07-28</td>\n",
+       "      <td>Winston</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01133</td>\n",
+       "      <td>399</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392439</th>\n",
+       "      <td>2020-08-02</td>\n",
+       "      <td>Winston</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01133</td>\n",
+       "      <td>440</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395655</th>\n",
+       "      <td>2020-08-03</td>\n",
+       "      <td>Winston</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01133</td>\n",
+       "      <td>442</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1202919</th>\n",
+       "      <td>2021-04-09</td>\n",
+       "      <td>Winston</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01133</td>\n",
+       "      <td>2722</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398871</th>\n",
+       "      <td>2020-08-04</td>\n",
+       "      <td>Winston</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01133</td>\n",
+       "      <td>445</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402087</th>\n",
+       "      <td>2020-08-05</td>\n",
+       "      <td>Winston</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01133</td>\n",
+       "      <td>448</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1199671</th>\n",
+       "      <td>2021-04-08</td>\n",
+       "      <td>Winston</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01133</td>\n",
+       "      <td>2722</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>405305</th>\n",
+       "      <td>2020-08-06</td>\n",
+       "      <td>Winston</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01133</td>\n",
+       "      <td>454</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1196422</th>\n",
+       "      <td>2021-04-07</td>\n",
+       "      <td>Winston</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01133</td>\n",
+       "      <td>2720</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1206167</th>\n",
+       "      <td>2021-04-10</td>\n",
+       "      <td>Winston</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01133</td>\n",
+       "      <td>2722</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1491880</th>\n",
+       "      <td>2021-07-07</td>\n",
+       "      <td>Winston</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01133</td>\n",
+       "      <td>2840</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>31542 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               date   county    state   fips  cases deaths\n",
+       "544132   2020-09-18  Autauga  Alabama  01001   1664     24\n",
+       "1228836  2021-04-17  Autauga  Alabama  01001   6760    106\n",
+       "243246   2020-06-16  Autauga  Alabama  01001    373      7\n",
+       "959382   2021-01-24  Autauga  Alabama  01001   5376     62\n",
+       "1368449  2021-05-30  Autauga  Alabama  01001   7142    110\n",
+       "1478829  2021-07-03  Autauga  Alabama  01001   7262    113\n",
+       "35596    2020-04-06  Autauga  Alabama  01001     12      1\n",
+       "774398   2020-11-28  Autauga  Alabama  01001   2735     42\n",
+       "1167128  2021-03-29  Autauga  Alabama  01001   6577     99\n",
+       "460054   2020-08-23  Autauga  Alabama  01001   1324     23\n",
+       "59165    2020-04-15  Autauga  Alabama  01001     25      1\n",
+       "363445   2020-07-24  Autauga  Alabama  01001    921     21\n",
+       "...             ...      ...      ...    ...    ...    ...\n",
+       "389222   2020-08-01  Winston  Alabama  01133    438     10\n",
+       "376354   2020-07-28  Winston  Alabama  01133    399     10\n",
+       "392439   2020-08-02  Winston  Alabama  01133    440     11\n",
+       "395655   2020-08-03  Winston  Alabama  01133    442     11\n",
+       "1202919  2021-04-09  Winston  Alabama  01133   2722     71\n",
+       "398871   2020-08-04  Winston  Alabama  01133    445     11\n",
+       "402087   2020-08-05  Winston  Alabama  01133    448     11\n",
+       "1199671  2021-04-08  Winston  Alabama  01133   2722     71\n",
+       "405305   2020-08-06  Winston  Alabama  01133    454     11\n",
+       "1196422  2021-04-07  Winston  Alabama  01133   2720     71\n",
+       "1206167  2021-04-10  Winston  Alabama  01133   2722     72\n",
+       "1491880  2021-07-07  Winston  Alabama  01133   2840     72\n",
+       "\n",
+       "[31542 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Undestading FIPS formart: SSCCC WHERE SS represent State, and CCC county\n",
+    "covidCounties[covidCounties['state'] =='Alabama'].sort_values(by='fips')"
    ]
   }
  ],
