Verson beta, pre extensive documentation

--- a/Exploratory/COVID-19 NYTimes - Exploratory.ipynb
+++ b/Exploratory/COVID-19 NYTimes - Exploratory.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Here you'll find the process to understand the dataset and correct potential issues before joining with other data.\n",
     "\n",
-    "### Resume of finds\n",
+    "### Learning Resume\n",
     "- _FIPS_ imported as float due NULL values\n",
     "- All _FIPS_ are well formatted (5 characters numeric)\n",
     "- There are some _FIPS_ as NULL but state-county data present (We can add correct FIPS fo them)\n",
@@ -18,7 +18,8 @@
     "    - Kansas City\n",
     "    - Joplin\n",
     "- There are records with empty value in _deaths_ column, all of them belong to Puerto Rico\n",
-    "- State and County don't have an empty value or malformed name"
+    "- State and County don't have an empty value or malformed name\n",
+    "- 13605 records have null FIPS"
    ]
   },
   {
@@ -467,6 +468,172 @@
    "metadata": {},
    "source": [
     "### FLIPS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>county</th>\n",
+       "      <th>state</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>cases</th>\n",
+       "      <th>deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>416</th>\n",
+       "      <td>2020-03-01</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>418</th>\n",
+       "      <td>2020-03-01</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Rhode Island</td>\n",
+       "      <td></td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>448</th>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>450</th>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Rhode Island</td>\n",
+       "      <td></td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>482</th>\n",
+       "      <td>2020-03-03</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td></td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1494214</th>\n",
+       "      <td>2021-07-07</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Puerto Rico</td>\n",
+       "      <td></td>\n",
+       "      <td>5594</td>\n",
+       "      <td>2552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1494226</th>\n",
+       "      <td>2021-07-07</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Rhode Island</td>\n",
+       "      <td></td>\n",
+       "      <td>11953</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1494427</th>\n",
+       "      <td>2021-07-07</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Tennessee</td>\n",
+       "      <td></td>\n",
+       "      <td>7658</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1494714</th>\n",
+       "      <td>2021-07-07</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Utah</td>\n",
+       "      <td></td>\n",
+       "      <td>1176</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1494731</th>\n",
+       "      <td>2021-07-07</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Vermont</td>\n",
+       "      <td></td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13605 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               date         county         state fips  cases deaths\n",
+       "416      2020-03-01  New York City      New York           1      0\n",
+       "418      2020-03-01        Unknown  Rhode Island           2      0\n",
+       "448      2020-03-02  New York City      New York           1      0\n",
+       "450      2020-03-02        Unknown  Rhode Island           2      0\n",
+       "482      2020-03-03  New York City      New York           2      0\n",
+       "...             ...            ...           ...  ...    ...    ...\n",
+       "1494214  2021-07-07        Unknown   Puerto Rico        5594   2552\n",
+       "1494226  2021-07-07        Unknown  Rhode Island       11953      5\n",
+       "1494427  2021-07-07        Unknown     Tennessee        7658     95\n",
+       "1494714  2021-07-07        Unknown          Utah        1176     23\n",
+       "1494731  2021-07-07        Unknown       Vermont          19      0\n",
+       "\n",
+       "[13605 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#13605 records with null FIPS\n",
+    "covidCounties[covidCounties['fips']=='']"
    ]
   },
   {
@@ -1233,6 +1400,176 @@
    "source": [
     "# Undestading FIPS formart: SSCCC WHERE SS represent State, and CCC county\n",
     "covidCounties[covidCounties['state'] =='Alabama'].sort_values(by='fips')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>county</th>\n",
+       "      <th>state</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>cases</th>\n",
+       "      <th>deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>416</th>\n",
+       "      <td>2020-03-01</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>36061</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>448</th>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>36061</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>482</th>\n",
+       "      <td>2020-03-03</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>36061</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>518</th>\n",
+       "      <td>2020-03-04</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>36061</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>565</th>\n",
+       "      <td>2020-03-05</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>36061</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1480703</th>\n",
+       "      <td>2021-07-03</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>36061</td>\n",
+       "      <td>956230</td>\n",
+       "      <td>33426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1483949</th>\n",
+       "      <td>2021-07-04</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>36061</td>\n",
+       "      <td>956381</td>\n",
+       "      <td>33433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1487195</th>\n",
+       "      <td>2021-07-05</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>36061</td>\n",
+       "      <td>956616</td>\n",
+       "      <td>33436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1490441</th>\n",
+       "      <td>2021-07-06</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>36061</td>\n",
+       "      <td>956795</td>\n",
+       "      <td>33438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1493687</th>\n",
+       "      <td>2021-07-07</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>36061</td>\n",
+       "      <td>956963</td>\n",
+       "      <td>33442</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>494 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               date         county     state   fips   cases deaths\n",
+       "416      2020-03-01  New York City  New York  36061       1      0\n",
+       "448      2020-03-02  New York City  New York  36061       1      0\n",
+       "482      2020-03-03  New York City  New York  36061       2      0\n",
+       "518      2020-03-04  New York City  New York  36061       2      0\n",
+       "565      2020-03-05  New York City  New York  36061       4      0\n",
+       "...             ...            ...       ...    ...     ...    ...\n",
+       "1480703  2021-07-03  New York City  New York  36061  956230  33426\n",
+       "1483949  2021-07-04  New York City  New York  36061  956381  33433\n",
+       "1487195  2021-07-05  New York City  New York  36061  956616  33436\n",
+       "1490441  2021-07-06  New York City  New York  36061  956795  33438\n",
+       "1493687  2021-07-07  New York City  New York  36061  956963  33442\n",
+       "\n",
+       "[494 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 36061 Flip is missing we can try to use in NY\n",
+    "covidCounties[covidCounties['fips'].str.startswith('360')][['fips']].drop_duplicates().sort_values(['fips']).reset_index(drop=True)\n",
+    "\n",
+    "covidCounties.loc[covidCounties['county'] == 'New York City', 'fips']  = '36061'\n",
+    "\n",
+    "covidCounties[covidCounties['county'] == 'New York City']"
    ]
   }
  ],
