--- a/Exploratory/Population Estimate Data  (2020) - Exploratory.ipynb
+++ b/Exploratory/Population Estimate Data  (2020) - Exploratory.ipynb
@@ -11,7 +11,16 @@
     "Here you'll find the process to understand the dataset and correct potential issues before joining with other data.\n",
     "\n",
     "Data source template:\n",
-    "https://www2.census.gov/programs-surveys/popest/datasets/2010-2019/counties/totals/"
+    "https://www2.census.gov/programs-surveys/popest/datasets/2010-2019/counties/totals/\n",
+    "\n",
+    "### Learning Resume\n",
+    "\n",
+    "- Encoding of source file need to be set due decode issue\n",
+    "- DataSet contains records with COUNTY FLIPS = 0, they are STATE aggregated data\n",
+    "- SUMLEV help us to exclude aggragetion state population (Exclude SUMLEV = 40)\n",
+    "- POPESTIMATE2019 is a very clean column with a big standard deviation\n",
+    "    - Min population: 86\n",
+    "    - Max population: 10039107\n"
    ]
   },
   {
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,24 +203,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>POPESTIMATE2019</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3193.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>205599.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1260310.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>86.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>11128.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>26516.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>73309.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>39512223.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0    40\n",
-       "1    50\n",
-       "Name: SUMLEV, dtype: int64"
+       "      POPESTIMATE2019\n",
+       "count         3193.00\n",
+       "mean        205599.45\n",
+       "std        1260310.32\n",
+       "min             86.00\n",
+       "25%          11128.00\n",
+       "50%          26516.00\n",
+       "75%          73309.00\n",
+       "max       39512223.00"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# COUNTY =0 is a columative by state\n",
+    "# COUNTY=0 is a columative by state\n",
     "countiesData[countiesData['SUMLEV'] == 40]"
    ]
   },
@@ -239,6 +313,94 @@
    "source": [
     "print (f\"Min population: {countiesData[countiesData['SUMLEV'] == 50]['POPESTIMATE2019'].min()}\")\n",
     "print (f\"Max population: {countiesData[countiesData['SUMLEV'] == 50]['POPESTIMATE2019'].max()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>POPESTIMATE2019</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3193.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>205599.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1260310.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>86.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>11128.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>26516.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>73309.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>39512223.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      POPESTIMATE2019\n",
+       "count         3193.00\n",
+       "mean        205599.45\n",
+       "std        1260310.32\n",
+       "min             86.00\n",
+       "25%          11128.00\n",
+       "50%          26516.00\n",
+       "75%          73309.00\n",
+       "max       39512223.00"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Stats showbig standard deviation\n",
+    "countiesData[['POPESTIMATE2019']].describe().apply(lambda s: s.apply('{0:.2f}'.format))"
    ]
   },
   {
@@ -348,10 +510,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SUMLEV</th>\n",
+       "      <th>REGION</th>\n",
+       "      <th>DIVISION</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>COUNTY</th>\n",
+       "      <th>STNAME</th>\n",
+       "      <th>CTYNAME</th>\n",
+       "      <th>CENSUS2010POP</th>\n",
+       "      <th>ESTIMATESBASE2010</th>\n",
+       "      <th>POPESTIMATE2010</th>\n",
+       "      <th>...</th>\n",
+       "      <th>RDOMESTICMIG2019</th>\n",
+       "      <th>RNETMIG2011</th>\n",
+       "      <th>RNETMIG2012</th>\n",
+       "      <th>RNETMIG2013</th>\n",
+       "      <th>RNETMIG2014</th>\n",
+       "      <th>RNETMIG2015</th>\n",
+       "      <th>RNETMIG2016</th>\n",
+       "      <th>RNETMIG2017</th>\n",
+       "      <th>RNETMIG2018</th>\n",
+       "      <th>RNETMIG2019</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1860</th>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>19378102</td>\n",
+       "      <td>19378144</td>\n",
+       "      <td>19399878</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-9.267874</td>\n",
+       "      <td>0.310701</td>\n",
+       "      <td>-0.963243</td>\n",
+       "      <td>-1.791701</td>\n",
+       "      <td>-3.130145</td>\n",
+       "      <td>-4.174457</td>\n",
+       "      <td>-5.379085</td>\n",
+       "      <td>-6.127425</td>\n",
+       "      <td>-6.406096</td>\n",
+       "      <td>-6.920598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1891</th>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>36</td>\n",
+       "      <td>61</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York County</td>\n",
+       "      <td>1585873</td>\n",
+       "      <td>1586381</td>\n",
+       "      <td>1588767</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-7.201265</td>\n",
+       "      <td>6.150025</td>\n",
+       "      <td>3.585789</td>\n",
+       "      <td>-3.412067</td>\n",
+       "      <td>-3.133048</td>\n",
+       "      <td>-1.605270</td>\n",
+       "      <td>-4.965909</td>\n",
+       "      <td>-7.488348</td>\n",
+       "      <td>-4.535926</td>\n",
+       "      <td>-3.071435</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 164 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      SUMLEV  REGION  DIVISION  STATE  COUNTY    STNAME          CTYNAME  \\\n",
+       "1860      40       1         2     36       0  New York         New York   \n",
+       "1891      50       1         2     36      61  New York  New York County   \n",
+       "\n",
+       "      CENSUS2010POP  ESTIMATESBASE2010  POPESTIMATE2010  ...  \\\n",
+       "1860       19378102           19378144         19399878  ...   \n",
+       "1891        1585873            1586381          1588767  ...   \n",
+       "\n",
+       "      RDOMESTICMIG2019  RNETMIG2011  RNETMIG2012  RNETMIG2013  RNETMIG2014  \\\n",
+       "1860         -9.267874     0.310701    -0.963243    -1.791701    -3.130145   \n",
+       "1891         -7.201265     6.150025     3.585789    -3.412067    -3.133048   \n",
+       "\n",
+       "      RNETMIG2015  RNETMIG2016  RNETMIG2017  RNETMIG2018  RNETMIG2019  \n",
+       "1860    -4.174457    -5.379085    -6.127425    -6.406096    -6.920598  \n",
+       "1891    -1.605270    -4.965909    -7.488348    -4.535926    -3.071435  \n",
+       "\n",
+       "[2 rows x 164 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get NY FIPS to try to find a way to match with missing in NY Times dataset\n",
+    "countiesData[countiesData['CTYNAME'].str.contains('New York')]"
+   ]
   }
  ],
  "metadata": {
